# django-braces

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  conftest.py  env.tests  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  tox.ini  venv
.github/: FUNDING.yml
.github/workflows/: ci.yml  example.yml
braces/: __init__.py  cache.py  forms.py  stubs.py  views.py
braces/mixins/: __init__.py  _access.py  _forms.py  _http.py  _json.py  _messages.py  _misc.py  _queries.py  _redirects.py  _rest_framework.py
braces/views/: __init__.py  _access.py  _ajax.py  _forms.py  _other.py  _queries.py
docs/: Makefile  access.rst  changelog.rst  conf.py  contributing.rst  form.rst  forms.rst  http.rst  index.rst  json.rst  messages.rst  migrating.rst  misc.rst  other.rst  queries.rst  redirects.rst  rest_framework.rst
mixin/: forms.py
mixin/views/: __init__.py  _access.py  _ajax.py  _forms.py  _other.py  _queries.py
src/braces/: __init__.py
src/braces/mixins/: __init__.py  __init__.pyi  _access.py  _forms.py  _json.py  _rest_framework.py  access.py  access.pyi  forms.py  forms.pyi  http.py  http.pyi  json.py  json.pyi  messages.py  messages.pyi  misc.py  misc.pyi  queries.py  queries.pyi  redirects.py  redirects.pyi  rest_framework.py  rest_framework.pyi
test_project/test_project/: settings.py  urls.py  views.py
tests/: __init__.py  backends.py  compat.py  conftest.py  factories.py  forms.py  helpers.py  models.py  settings.py  test_access.py  test_access_mixins.py  test_ajax_mixins.py  test_forms.py  test_http.py  test_json.py  test_messages.py  test_misc.py  test_other_mixins.py  test_queries.py  test_queries_old.py  test_redirects.py  test_rest_framework.py  urls.py  urls_namespaced.py  views.py
tests/mixins/: test_access.py  test_forms.py  test_http.py  test_json.py  test_misc.py  test_queries.py  test_redirects.py
tests/project/: forms.py  models.py  settings.py  urls.py  views.py
tests/templates/: 404.html  form.html
tests/testapp/: factories.py  forms.py  urls.py  urls_namespaced.py  views.py
tests/testapp/templates/: form.html
