[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
  { name = "Kenneth Love", email = "kenneth@bracket.com" },
  { name = "Chris Jones", email = "chris@bracket.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Development Status :: 6 - Mature",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["flit", "pre-commit"]
dynamic = ["version", "description"]
keywords = ["django", "views", "forms", "mixins"]
license = {file = "LICENSE.txt"}
name = "django-braces"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
documentation = "https://django-braces.readthedocs.io/en/latest/"
repository = "https://github.com/brack3t/django-braces"

[project.optional-dependencies]
checks = [
  "bandit[toml]",
  "black",
  "django-stubs[compatible-mypy]",
  "djangorestframework-stubs[compatible-mypy]",
  "flake8",
  "interrogate",
  "isort",
  "pylint",
  "mypy",
]
dev = [
  "django",
  "django-rest-framework",
]
documentation = ["sphinx", "releases", "semantic-version"]
testing = ["pytest", "pytest-cov", "pytest-django", "pytest-reverse"]

# Tool configuration

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 88

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "if settings.DEBUG:",
  "if settings.TESTING:",
  "if settings.PRODUCTION:",
  "if settings.STAGING:",
  "if settings.LOCAL:",
]
ignore_errors = true
omit = [
  "tests/*",
  "venv/*",
  "build/*",
  "dist/*",
  "docs/*",
  "setup.py",
  "conftest.py",
]
show_missing = true
fail_under = 95

[tool.coverage.run]
branch = true
source = ["braces"]

[tool.django-stubs]
django_settings_module = "tests.project.settings"

[tool.flake8]
extend-exclude = ["venv", "build", "dist", "docs"]
extend-ignore = ["F403", "PLU002"]
format = "pylint"
hang-closing = true
require-plugins = []

[tool.flit.module]
name = "braces"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
fail-under = 75
exclude = ["setup.py", "conftest.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*"]
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 1
quiet = false
color = true
omit-covered-files = true

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
extend_skip = [".gitignore", "pyproject.toml", ".md", ".txt", ".in", ".yml"]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["django", "rest_framework"]
line_length = 88
multi_line_output = 5
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true
split_on_trailing_comma = true
src_paths = ["braces", "tests"]
use_parentheses = true

[tool.mypy]
color_output = true
error_summary = true
exclude = ["venv", "build", "dist", "docs", "tests"]
implicit_optional = true
pretty = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
show_error_context = true
show_column_numbers = true

[tool.pylint]
# main
ignore-paths = [
  "__pycache__",
  ".gitignore",
  ".github",
  ".mypy_cache",
  "docs",
  "CONTRIBUTORS.txt",
  "LICENSE.txt",
  "MANIFEST.in",
  "pyproject.toml",
  "README.md",
]
ignore-patterns = [
  "\\.vscode.*"
]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.broad_try_clause",
  "pylint.extensions.code_style",
  "pylint.extensions.consider_refactoring_into_while_condition",
  "pylint.extensions.for_any_all",
  "pylint.extensions.mccabe",
  "pylint.extensions.dunder",
  "pylint.extensions.redefined_variable_type",
  "pylint.extensions.set_membership",
]
# format
max-line-length = 88
# imports
known-third-party = ["django", "rest_framework"]
# variables
allow-global-unused-variables = false
init-import = true
# broad_try_clause
max-try-statements = 3

[tool.pytest.ini_options]
# ini_options
addopts = "--cov --nomigrations --reverse"
DJANGO_SETTINGS_MODULE = "tests.project.settings"
pythonpath = ". src"

[tool.tbump]
github_url = "https://github.com/brack3t/django-braces/"

[tool.tbump.version]
current = "2.0.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "braces/__init__.py"

[[tool.tbump.before_commit]]
name = "check changelog"
cmd = "grep -q {new_version} docs/changelog.rst"
