[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
  { name = "Kenneth Love", email = "kenneth@bracket.com" },
  { name = "Chris Jones", email = "chris@bracket.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Development Status :: 6 - Mature",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["flit", "pre-commit"]
dynamic = ["version", "description"]
keywords = ["django", "views", "forms", "mixins"]
license = {file = "LICENSE.txt"}
name = "django-braces"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
documentation = "https://django-braces.readthedocs.io/en/latest/"
repository = "https://github.com/brack3t/django-braces"

[project.optional-dependencies]
checks = [
  "black",
  "django-stubs[compatible-mypy]",
  "djangorestframework-stubs[compatible-mypy]",
  "interrogate",
  "mypy",
  "ruff",
]
dev = [
  "django",
  "django-rest-framework",
]
documentation = ["sphinx", "releases", "semantic-version"]
testing = ["pytest", "pytest-cov", "pytest-django", "pytest-reverse"]

# Tool configuration

[tool.black]
line-length = 88

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "if settings.DEBUG:",
  "if settings.TESTING:",
  "if settings.PRODUCTION:",
  "if settings.STAGING:",
  "if settings.LOCAL:",
]
ignore_errors = true
omit = [
  "tests/*",
  "venv/*",
  "build/*",
  "dist/*",
  "docs/*",
  "setup.py",
  "conftest.py",
]
show_missing = true
fail_under = 95

[tool.coverage.run]
branch = true
source = ["braces"]

[tool.django-stubs]
django_settings_module = "tests.project.settings"

[tool.flit.module]
name = "braces"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
fail-under = 75
exclude = ["setup.py", "conftest.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*"]
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 1
quiet = false
color = true
omit-covered-files = true


[tool.mypy]
color_output = true
error_summary = true
exclude = ["venv", "build", "dist", "docs", "tests"]
implicit_optional = true
pretty = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
show_error_context = true
show_column_numbers = true

[tool.pytest.ini_options]
# ini_options
addopts = "--cov --nomigrations --reverse"
django_find_project = false
DJANGO_SETTINGS_MODULE = "tests.project.settings"
markers = ["mixin_class", "view_class"]
pythonpath = ". src"

[tool.ruff]
select = [
  "ANN",  # flake8-annotations
  "B",  # flake8-bugbear
  "BLE",  # flake8-blind-except
  "COM",  # flake8-commas
  "D",  # pydocstyle
  "DJ",  # flake8-django
  "E",  # pycodestyle
  "EM",  # flake8-errmsg
  "ERA",  # flake8-eradicate
  "F",  # Pyflakes
  "FBT",  # flake8-boolean-trap
  "G",  # flake8-logging-format
  "I",  # isort
  "INP",  # flake8-no-pep420
  "N",  # pep8-naming
  "PIE",  # flake8-pie
  "PT",  # flake8-pytest
  "PYI",  # flake8-pyi
  "Q",  # flake8-quotes
  "RET", # flake8-return
  "RSE",  # flake8-raises
  "RUF",  # ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "T20", # flake8-print
  "TCH",  # flake8-type-checking
  "TRY",  # tryceratops
]

# ignore
ignore = ["F403",]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ANN", "B", "BLE", "COM", "D", "DJ", "E", "EM", "ERA", "F", "FBT", "G", "I", "INP", "N", "PIE", "PT", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TCH", "TRY"]

unfixable = []

extend-exclude = ["docs"]
per-file-ignores = {}
ignore-init-module-imports = true

format = "pylint"

# Assume Python 3.8.
target-version = "py38"
src = ["src", "tests"]

[tool.ruff.isort]
combine-as-imports = true
known-third-party = ["django", "rest_framework"]
split-on-trailing-comma = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.tbump]
github_url = "https://github.com/brack3t/django-braces/"

[tool.tbump.version]
current = "2.0.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "braces/__init__.py"

[[tool.tbump.before_commit]]
name = "check changelog"
cmd = "grep -q {new_version} docs/changelog.rst"
